Fix spacing in lists

--- a/src/css/_list.less
+++ b/src/css/_list.less
@@ -46,11 +46,8 @@
   &__title {
     font-size: 1.25rem;
     font-weight: bold;
-    margin-top: @space;
-    margin-bottom: 0;
+    margin: @space 0;
   }
-
-  &__description { margin-top: @space; }
 }
 
 @media @med-md {
